--- a/movie/src/Components/css/signup.css
+++ b/movie/src/Components/css/signup.css
@@ -3,6 +3,14 @@
     height: 100vh;
     display: flex;
     flex-direction: column;
+    /* align-items: center; */
+    /* justify-content: center; */
+}
+
+.main-reg-container{
+    flex:1;
+    height: 100%;
+    display: flex;
     align-items: center;
     justify-content: center;
 }
