--- a/movie/src/Components/css/signup.css
+++ b/movie/src/Components/css/signup.css
@@ -19,7 +19,10 @@
 {
     width: 30%;
     border: 1px solid black;
-    padding: 1rem;
+    padding: 2rem;
+    color: var(--body-background);
+    background-color: var(--body-color);
+    border-radius: 2rem;
 } 
 
 .container-form form{
@@ -32,6 +35,7 @@
 
 .header-reg{
     text-align: center;
+    margin-bottom: 2rem;
 }
 
 .register-input-container{
@@ -44,6 +48,7 @@
 .register-input-container input{
     padding: 0.5rem;
     width: 100%;
+    border-radius: 0.4rem;
 }    
 
 .reg-password img ,  .reg-username img{
@@ -59,6 +64,14 @@
     padding: 0.5rem 2rem;
 }
 
+.reg-btn input{
+    background-color: var(--body-background);
+    color: var(--body-color);
+    border: none;
+    padding: 0.6rem 2rem;
+    border-radius: 0.4rem;
+    cursor: pointer;    
+}
 
 .reg-gender{
     display: flex;
@@ -72,12 +85,8 @@
     align-items: center;
 }
 
-
-
-
-
 .verify-email{
-    margin-top: 0.4rem;
+    margin-top: 1rem;
     display: flex;
     gap:3rem;
 }
@@ -88,8 +97,16 @@
 
 .verify-email button{
     flex: 20;
+    background-color: var(--body-background);
+    color: var(--body-color);
+    border:none;
+    border-radius: 0.3rem;
 }
 
 .reg-username img{
     margin-left: 0.3rem;
+}
+
+.reg-btn{
+    margin-top: 1rem;
 }
