--- a/movie/src/Components/css/imgslider.css
+++ b/movie/src/Components/css/imgslider.css
@@ -26,21 +26,25 @@
 .img-holder-1 img{
     height: 100%;
     width: 100%;
-    max-width: 100%; /* Limit width to container size */
-    opacity: 1; /* Start with full opacity */
+    object-fit: cover;
     transition: opacity 0.4s ease; /* Add transition effect for opacity */
     border-radius: 0.5rem;
+    animation: tillImgCome 0.5s 3 ;
+}
+
+.imgslider-container a:hover{
+    background-color: none;   
 }
 .imgslider-container a{
-        text-decoration: none;
-        color: black;
-        font-size: 24px;
-        line-height: 40vh;
-        cursor: pointer;
-        margin-inline:1rem;
+    text-decoration: none;
+    color: black;
+    font-size: 24px;
+    line-height: 40vh;
+    cursor: pointer;
+    margin-inline:1rem;
 }
 
 .imgslider-container a:hover {
-    background-color: rgba(255, 255, 255, 0.5);
-    border-radius: 50%;
+    /* background-color: rgba(255, 255, 255, 0.5); */
+    /* border-radius: 50%; */
 }
