--- a/movie/src/Components/css/navbar.css
+++ b/movie/src/Components/css/navbar.css
@@ -4,10 +4,10 @@
     width: 100%;
     font-family: "Roboto", sans-serif;
     font-style: normal;
-    box-shadow: 1px -1px 5px 1px #222;
     padding: 0.5rem;
-    background-color: var(--body-color);
     /* border:1px solid red; */
+    background-color: var(--body-color);
+    box-shadow: 1px -0px 10px 1px  var(--body-main-color)  ;
 }
 
 nav{
