--- a/movie/src/App.css
+++ b/movie/src/App.css
@@ -38,6 +38,7 @@
 }
 
 .movie-container{
+  position: relative;
   margin-bottom: 1rem;
   backdrop-filter: blur(10px);
 }
@@ -61,18 +62,23 @@
 }
 
 .img-container-api{
-  display: flex;
+  display: flex; /* Change to flex */
+  flex-wrap: nowrap; /* Prevent wrapping of items */
+  overflow: hidden; /* Hide vertical scrollbar */
+  padding-bottom: 1rem; 
 }
 
 .card-container{
   width:17vw;
   height:20rem;
+  flex: 0 0 auto; /* Prevent shrinking, basis, and growth */
   background-color: rgb(231, 220, 220);
   border-radius: 1.5rem;
   cursor: pointer;
   margin-right: 1rem;
   position: relative;
   display: flex;
+  z-index: 0;
 }
 
 .img-card{
@@ -139,6 +145,36 @@
   background-color: rgba(0, 0, 0, 0); /* Adjust opacity as needed */
 }
 
+
+
+.movie-scroll{
+  position: absolute;
+  z-index: 11;
+  width: 2rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 100%;
+  color: white;
+  /* background-color: red; */
+  backdrop-filter: blur(10px);
+  text-decoration: none;
+  font-size: 1.5rem;
+}
+
+.scroll-right{
+  right: 0;
+}
+
+
+
+
+
+
+
+
+
+
 @keyframes tillImgCome  {
     0%{
       background-color: rgba(0,0,0,0.2);
@@ -146,3 +182,6 @@
       background-color: rgba(255,255,255,0.2);
     }
 }
+
+
+
