--- a/movie/src/Components/css/listallmovies.css
+++ b/movie/src/Components/css/listallmovies.css
@@ -1,27 +1,41 @@
 .listallmovies-main{
-    padding-inline: 2rem;
 }
 
+.header-listall{
+    text-align: center;
+    padding-block: 0.5rem;
+    background-color: var(--body-color);
+    color: var(--body-background);
+    margin-bottom: 1rem;
+}
 
 .all-movies-container{
+    padding-inline: 2rem;
 
 }
 
 .movies-list-continer{
     display: grid;
+    /* grid-gap: 1rem; */
+    row-gap: 2rem;
+    column-gap: 1rem;
     grid-template-columns: repeat(auto-fill, minmax(200px, 1fr)); /* Adjust minmax values as needed */
-    gap: 1rem; 
 }
 
 .api-movie-container-listmovie{
     width: 30vh;
     height: 40vh;
-    margin-right: 1rem;
+    border: 1px solid black;
 }
+
 .api-movie-container-listmovie img{
     width: 100%;
     height: 100%;
+    cursor: pointer;
     object-fit: cover;
     border-radius: 0.3rem;
-
 }
+
+.img-movie-listall{
+}
+
